--- a/Arcade/pom.xml
+++ b/Arcade/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cs1302.tetris</groupId>
-  <artifactId>Arcade</artifactId>
+  <groupId>cs1302.arcade</groupId>
+  <artifactId>cs1302-arcade</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>cs1302-arcade</name>
